--- a/src/layouts/Search.astro
+++ b/src/layouts/Search.astro
@@ -81,9 +81,10 @@ form.site-search button {
             </form>
             <div id="site-search-results" data-title={ _(search.results_title) } data-emptytitle={ _(search.no_results_title) }>
             </div>
-            <script src="/js/search.js" type="module" async></script>
         </ContentGroup>
         <Footer lang={ lang } />
+        <div id="debug"></div>
         <script src="/js/main.js" type="module" async></script>
+        <script src="/js/search.js" type="module" async></script>
     </body>
 </html>
