--- a/src/layouts/Search.astro
+++ b/src/layouts/Search.astro
@@ -2,7 +2,7 @@
 import * as CONFIG from '../config';
 import t from '../components/Language/language.json';
 import { Language } from '../components/Language/language';
-import Head from '../components/head/Head.astro';
+import Head from '../components/Head/Head.astro';
 import SkipLinks from '../components/Content/SkipLinks.astro';
 import Breadcrumbs from '../components/Content/Breadcrumbs.astro';
 import Header from '../components/Content/Header.astro';
