--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -48,7 +48,7 @@ a:focus {
 @media (max-width: 860px) {
 }
 </style>
-<nav class="skip-links" aria-label="skiplinks">
+<nav class="skip-links" aria-label="skiplinks" id="site-top">
     <a href="#site-nav">{ _(skiplinks.skip_to_navigation) }</a>
     <a href="#site-main">{ _(skiplinks.skip_to_content) }</a>
     <a href="#site-footer">{ _(skiplinks.skip_to_footer) }</a>
