--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -1,6 +1,6 @@
 ---
 import type { Frontmatter } from '../config';
-import Head from '../components/head/Head.astro';
+import Head from '../components/Head/Head.astro';
 import SkipLinks from '../components/Content/SkipLinks.astro';
 import Breadcrumbs from '../components/Content/Breadcrumbs.astro';
 import Header from '../components/Content/Header.astro';
