--- a/src/pages/search.json.astro
+++ b/src/pages/search.json.astro
@@ -15,10 +15,8 @@ const items = JSON.stringify(allPages.map(page => {
         category: page.frontmatter.category ?? '',
         tags: page.frontmatter.keywords ?? '',
         url: url,
-        date: page.date ?? ''
+        date: page.frontmatter.date ?? ''
     };
 }));
-
-
 ---
 <Fragment set:html={items} />
