--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -1,6 +1,6 @@
 ---
 import t from '../Language/language.json';
-import { Language } from '../Language/language';
+import { Lang } from '../Language/language';
 
 // Properties
 type Props = {
@@ -9,9 +9,8 @@ type Props = {
 const { lang } = Astro.props as Props;
 
 // Language
-const language = new Language(lang);
+const _ = Lang(lang);
 const skiplinks = t.skiplinks;
-const _ = (entry: { [key: string]: string }) => language.translate(entry);
 
 // Logic
 // -
