--- a/src/layouts/Search.astro
+++ b/src/layouts/Search.astro
@@ -14,8 +14,8 @@ type Props = {
     frontmatter: CONFIG.Frontmatter
 };
 const { frontmatter } = Astro.props as Props;
-const lang = frontmatter.lang ?? 'en';
-const textDirection = frontmatter.dir ?? 'ltr';
+const lang = frontmatter.lang ?? CONFIG.SITE.default.lang;
+const textDirection = frontmatter.dir ?? CONFIG.SITE.default.dir;
 
 // Language
 const _ = Lang(lang);
