--- a/public/css/main.css
+++ b/public/css/main.css
@@ -174,6 +174,34 @@ tbody tr:nth-child(odd) {
     color: var(--fore-table-row-odd);
 }
 
+/* Main */
+
+
+main {
+    max-width: calc(var(--grid-max-width) - var(--navigation-width) - var(--grid-gap));
+    width: calc(var(--grid-width) - var(--navigation-width) - var(--grid-gap));
+}
+
+main h1 {
+    margin-top: 0.1em;
+}
+
+main ul ol, main ul ul, main ol ol, main ol ul {
+    margin: 0 0 0 1.2rem;
+}
+
+@media (max-width: 860px) {
+    /* Content First on Small Screens */
+    main {
+        grid-row: 1;
+    }
+  
+    main {
+        max-width: unset;
+        width: var(--grid-width);
+    }
+  }
+
 /* Overlay (Mobile Navigation, Search) */
 
 .overlay {
