--- a/src/components/Content/Navigation.astro
+++ b/src/components/Content/Navigation.astro
@@ -4,7 +4,7 @@ import { Lang } from '../Language/language';
 import NavigationItem from './NavigationItem.astro';
 import { mapNavPage } from '../../utilities/NavPage.astro';
 import type { NavPage } from '../../utilities/NavPage.astro';
-import { isNotArticle } from '../../utilities/PageTypeFilters.astro'
+import { isNotArticle, showInMenu } from '../../utilities/PageTypeFilters';
 import type { MarkdownInstance } from 'astro';
 
 // Properties
@@ -29,10 +29,12 @@ const allPages = await Astro.glob('../../pages/**/*.md');
 
 const pageHierarchy: NavPage[] = topLevelPages
   .filter(isNotArticle)
+  .filter(showInMenu)
   .map(mapWithUrl);
 
 const pageList: NavPage[] = allPages
   .filter(isNotArticle)
+  .filter(showInMenu)
   .map(mapWithUrl);
 
 for (let i = 0; i < pageHierarchy.length; i++) {
