--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -1,5 +1,5 @@
 ---
-import type { Frontmatter } from '../config';
+import { SITE, Frontmatter } from '../config';
 import Head from '../components/Head/Head.astro';
 import SkipLinks from '../components/Content/SkipLinks.astro';
 import Breadcrumbs from '../components/Content/Breadcrumbs.astro';
