--- a/src/layouts/Search.astro
+++ b/src/layouts/Search.astro
@@ -1,13 +1,13 @@
 ---
 import * as CONFIG from '../config';
-import t from '../components/Language/language.json';
-import { Lang } from '../components/Language/language';
-import Head from '../components/Head/Head.astro';
-import SkipLinks from '../components/Content/SkipLinks.astro';
-import Breadcrumbs from '../components/Content/Breadcrumbs.astro';
-import Header from '../components/Content/Header.astro';
-import Footer from '../components/Content/Footer.astro';
-import ContentGroup from '../components/Content/ContentGroup.astro';
+import t from '@language/language.json';
+import { Lang } from '@language/language';
+import Head from '@head/Head.astro';
+import SkipLinks from '@content/SkipLinks.astro';
+import Breadcrumbs from '@content/Breadcrumbs.astro';
+import Header from '@content/Header.astro';
+import Footer from '@content/Footer.astro';
+import ContentGroup from '@content/ContentGroup.astro';
 
 // Properties
 type Props = {
