--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,11 +1,11 @@
 ---
 import { SITE, Frontmatter } from '../config';
-import Head from '../components/Head/Head.astro';
-import SkipLinks from '../components/Content/SkipLinks.astro';
-import Breadcrumbs from '../components/Content/Breadcrumbs.astro';
-import Header from '../components/Content/Header.astro';
-import Footer from '../components/Content/Footer.astro';
-import ContentGroup from '../components/Content/ContentGroup.astro';
+import Head from '@head/Head.astro';
+import SkipLinks from '@content/SkipLinks.astro';
+import Breadcrumbs from '@content/Breadcrumbs.astro';
+import Header from '@content/Header.astro';
+import Footer from '@content/Footer.astro';
+import ContentGroup from '@content/ContentGroup.astro';
 
 type Props = {
     frontmatter: Frontmatter
