Temporarily remove Head

--- a/src/layouts/Search.astro
+++ b/src/layouts/Search.astro
@@ -2,7 +2,7 @@
 import * as CONFIG from '../config';
 import t from '@language/language.json';
 import { Lang } from '@language/language';
-import Head from '@head/Head.astro';
+// import Head from '@head/Head.astro';
 import SkipLinks from '@content/SkipLinks.astro';
 import Breadcrumbs from '@content/Breadcrumbs.astro';
 import Header from '@content/Header.astro';
@@ -61,7 +61,7 @@ form.site-search button {
 }
 </style>
 <html dir={ textDirection } lang={ lang } class="initial">
-    <Head frontmatter={ frontmatter } />
+    <!-- <Head frontmatter={ frontmatter } /> -->
     <body>
         <SkipLinks lang={ lang } />
         <Header lang={ lang } />
