--- a/src/components/Content/ContentGroup.astro
+++ b/src/components/Content/ContentGroup.astro
@@ -1,7 +1,7 @@
 ---
 import * as CONFIG from '../../config';
-import { Lang } from '../Language/language';
-import Navigation from './Navigation.astro';
+import { Lang } from '@language/language';
+import Navigation from '@content/Navigation.astro';
 
 // Properties
 type Props = {
