--- a/src/components/Content/Navigation.astro
+++ b/src/components/Content/Navigation.astro
@@ -1,10 +1,10 @@
 ---
-import t from '../Language/language.json';
-import { Lang } from '../Language/language';
-import NavigationItem from './NavigationItem.astro';
-import { mapNavPage } from '../../utilities/NavPage.astro';
-import type { NavPage } from '../../utilities/NavPage.astro';
-import { showInMenu } from '../../utilities/PageTypeFilters';
+import t from '@language/language.json';
+import { Lang } from '@language/language';
+import NavigationItem from '@content/NavigationItem.astro';
+import { mapNavPage } from '@utilities/NavPage.astro';
+import type { NavPage } from '@utilities/NavPage.astro';
+import { showInMenu } from '@utilities/PageTypeFilters';
 import type { MarkdownInstance } from 'astro';
 
 // Properties
