--- a/src/components/Content/NavigationItem.astro
+++ b/src/components/Content/NavigationItem.astro
@@ -1,7 +1,7 @@
 ---
-import t from '../Language/language.json';
-import { Lang } from '../Language/language';
-import type { NavPage } from '../../utilities/NavPage.astro';
+import t from '@language/language.json';
+import { Lang } from '@language/language';
+import type { NavPage } from '@utilities/NavPage.astro';
 
 // Properties
 type Props = {
