--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -1,6 +1,6 @@
 ---
-import t from '../Language/language.json';
-import { Lang } from '../Language/language';
+import t from '@language/language.json';
+import { Lang } from '@language/language';
 
 // Properties
 type Props = {
