--- a/src/components/Content/Breadcrumbs.astro
+++ b/src/components/Content/Breadcrumbs.astro
@@ -1,8 +1,8 @@
 ---
-import t from '../Language/language.json';
-import { Lang } from '../Language/language';
-import { mapNavPage, popMatchingPage } from '../../utilities/NavPage.astro';
-import type { NavPage } from '../../utilities/NavPage.astro';
+import t from '@language/language.json';
+import { Lang } from '@language/language';
+import { mapNavPage, popMatchingPage } from '@utilities/NavPage.astro';
+import type { NavPage } from '@utilities/NavPage.astro';
 import type { MarkdownInstance } from 'astro';
 
 // Properties
