--- a/src/components/Content/Header.astro
+++ b/src/components/Content/Header.astro
@@ -1,7 +1,7 @@
 ---
 import * as CONFIG from '../../config';
-import t from '../Language/language.json';
-import { Lang } from '../Language/language';
+import t from '@language/language.json';
+import { Lang } from '@language/language';
 
 // Properties
 type Props = {
