--- a/src/components/Content/SkipLinks.astro
+++ b/src/components/Content/SkipLinks.astro
@@ -46,7 +46,7 @@ a:focus {
 @media (max-width: 860px) {
 }
 </style>
-<nav class="skip-links" aria-label="skiplinks" id="site-top">
+<nav class="skip-links" aria-label={ _(t.aria.skiplinks) } id="site-top">
     <a href="#site-nav">{ _(t.skiplinks.skip_to_navigation) }</a>
     <a href="#site-main">{ _(t.skiplinks.skip_to_content) }</a>
     <a href="#site-footer">{ _(t.skiplinks.skip_to_footer) }</a>
