--- a/public/css/main.css
+++ b/public/css/main.css
@@ -219,6 +219,41 @@ main ul ol, main ul ul, main ol ol, main ol ul {
     border-bottom: 1px solid var(--fore-link);
 }
 
+/* Site Search */
+
+form.site-search {
+    padding: 1em;
+}
+
+form.site-search div {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 1em;
+}
+
+form.site-search label > * {
+    padding: 0.2em;
+}
+
+form.site-search button {
+    display: none;
+}
+
+.site-search-results {
+    font-size: 1.3rem;
+}
+
+.site-search-results a {
+    display: block;
+    padding: 0.2em;
+}
+
+@media (max-width: 860px) {
+    form.site-search div {
+        grid-template-columns: repeat(1, auto);
+    }    
+}
+
 /* Articles */
 
 .post-list {
