Search and authors

--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -24,6 +24,9 @@ const frontmatter: Frontmatter = {
   bannerImage: {
       src: '/surface-accessories-700.webp',
       alt: 'Dummy image',
+  },
+  authors:{
+    'steve-fenton'
   }
 };
 
