--- a/src/layouts/Search.astro
+++ b/src/layouts/Search.astro
@@ -2,12 +2,7 @@
 import * as CONFIG from '../config';
 import t from '@language/language.json';
 import { Lang } from '@language/language';
-import Head from '@head/HtmlHead.astro';
-import SkipLinks from '@content/SkipLinks.astro';
-import Breadcrumbs from '@content/Breadcrumbs.astro';
-import Header from '@content/Header.astro';
-import Footer from '@content/Footer.astro';
-import ContentGroup from '@content/ContentGroup.astro';
+import Default from '@layouts/Default.astro';
 
 // Properties
 type Props = {
@@ -24,29 +19,19 @@ const search = t.search;
 // Logic
 const siteUrl = Astro.site ? Astro.site.href : '';
 ---
-<html dir={ textDirection } lang={ lang } class="initial">
-    <Head frontmatter={ frontmatter } />
-    <body>
-        <SkipLinks lang={ lang } />
-        <Header lang={ lang } />
-        <Breadcrumbs lang={ lang } />
-        <ContentGroup lang={ lang } frontmatter={frontmatter}>
-            <slot />
-            <form method="GET" action={ CONFIG.SITE.search.fallbackUrl ?? 'https://www.google.com/search' } role="search" id="site-search" class="site-search note" autocomplete="off">
-                <fieldset>
-                    <input type="hidden" name={ CONFIG.SITE.search.fallbackSite ?? 'q' } value={ siteUrl } />
-                    <div>
-                        <label for="site-search-query">{ _(search.search_for) }</label>
-                        <input type="text" name={ CONFIG.SITE.search.fallbackSite ?? 'q' } id="site-search-query" autofocus="autofocus" />
-                        <button id="site-search-button" type="submit">{ _(search.submit) }</button>
-                    </div>
-                </fieldset>
-            </form>
-            <div id="site-search-results" data-title={ _(search.results_title) } data-emptytitle={ _(search.no_results_title) }>
+<Default frontmatter={frontmatter}>
+    <slot />
+    <form method="GET" action={ CONFIG.SITE.search.fallbackUrl ?? 'https://www.google.com/search' } role="search" id="site-search" class="site-search note" autocomplete="off">
+        <fieldset>
+            <input type="hidden" name={ CONFIG.SITE.search.fallbackSite ?? 'q' } value={ siteUrl } />
+            <div>
+                <label for="site-search-query">{ _(search.search_for) }</label>
+                <input type="text" name={ CONFIG.SITE.search.fallbackSite ?? 'q' } id="site-search-query" autofocus="autofocus" />
+                <button id="site-search-button" type="submit">{ _(search.submit) }</button>
             </div>
-        </ContentGroup>
-        <Footer lang={ lang } />
-        <script src="/js/main.js" type="module" async></script>
-        <script src="/js/search.js" type="module" async></script>
-    </body>
-</html>
+        </fieldset>
+    </form>
+    <div id="site-search-results" data-title={ _(search.results_title) } data-emptytitle={ _(search.no_results_title) }>
+    </div>
+    <script src="/js/search.js" type="module" async></script>
+</Default>
