--- a/src/components/Content/ContentGroup.astro
+++ b/src/components/Content/ContentGroup.astro
@@ -2,8 +2,9 @@
 import * as CONFIG from '../../config';
 import t from '@language/language.json';
 import { Lang } from '@language/language';
-import { isAuthor } from '@utilities/PageTypeFilters';
 import Navigation from '@content/Navigation.astro';
+import { isAuthor } from '@utilities/PageTypeFilters';
+import { formatDate } from '@utilities/DateFormat';
 
 // Properties
 type Props = {
@@ -39,8 +40,6 @@ const writers = [];
     }
   }
 });
-
-console.log(authorImage)
 ---
 <style>
 .content-group {
@@ -68,6 +67,7 @@ console.log(authorImage)
           <header>
               <h1>{ frontmatter.title ?? CONFIG.SITE.title }</h1>
           </header>
+          {writers.length > 0 && 
           <div class="post-meta">
             {authorImage?.src && 
             <img src={ authorImage.src } alt={ authorImage.alt } class="author-image" />
@@ -78,11 +78,12 @@ console.log(authorImage)
                   <a href={ writer.url }>{ writer.frontmatter.title }</a>
                 ))}
                 <time class="dt-published" datetime="DATE GOES HERE" itemprop="datePublished"></time>
-                  { frontmatter.pubDate ?? '' }
+                { formatDate(frontmatter, lang, CONFIG.SITE) }
                 </time>
               </span>
             </div>
           </div>
+          }
           <div>
               <slot />
           </div>
