--- a/src/layouts/Author.astro
+++ b/src/layouts/Author.astro
@@ -3,6 +3,8 @@ import * as CONFIG from '../config';
 import t from '@language/language.json';
 import { Lang } from '@language/language';
 import Default from '@layouts/Default.astro';
+import { sortByPubDateDesc } from '@utilities/PageTypeFilters';
+import { formatDate } from '@utilities/DateFormat';
 
 // Properties
 type Props = {
@@ -16,8 +18,28 @@ const textDirection = frontmatter.dir ?? CONFIG.SITE.default.dir;
 const _ = Lang(lang);
 
 // Logic
-//--
+const allPages = await Astro.glob('/**/*.md');
+const authorPages = allPages
+    .filter(p => p.frontmatter.authors?.indexOf(frontmatter.id) > -1)
+    .sort(sortByPubDateDesc)
+    .slice(0, 5);
 ---
 <Default frontmatter={frontmatter}>
     <slot />
+    <h2>{ _(t.author.recent_articles) }</h2>
+    <ul class="post-list">
+    {authorPages.map((post) => (
+    <li class="list-item" data-destination={ post.url }>
+        <article>
+        <img src={ post.frontmatter.bannerImage.src } alt={ post.frontmatter.bannerImage.alt } loading="lazy" />
+        <div class="list-item-content">
+        <span class="post-meta">{ formatDate(post.frontmatter, lang, CONFIG.SITE) }</span>
+        <h2>
+            <a href={ post.url }>{ post.frontmatter.title }</a>
+        </h2>
+        </div>
+        </article>
+    </li>
+    ))}
+    </ul>
 </Default>
