--- a/src/pages/articles/[page].astro
+++ b/src/pages/articles/[page].astro
@@ -10,6 +10,8 @@ import Footer from '@content/Footer.astro';
 import ContentGroup from '@content/ContentGroup.astro';
 import Head from '@head/HtmlHead.astro';
 import { getPageLinks } from '@paging/PageLinks';
+import { sortByPubDateDesc } from '@utilities/PageTypeFilters';
+import { formatDate } from '@utilities/DateFormat';
 
 const lang = SITE.default.lang;
 const textDirection = SITE.default.dir;
@@ -40,7 +42,9 @@ const aria = t.aria;
 
 export async function getStaticPaths({ paginate }: any) {
   const sourcePosts = await Astro.glob('../articles/**/*.md');
-  const urlPosts = sourcePosts.filter(p => p.url != null && p.url != '');
+  const urlPosts = sourcePosts
+    .filter(p => p.url != null && p.url != '')
+    .sort(sortByPubDateDesc);
 
   return paginate(urlPosts, { pageSize: SITE.pageSize });
 }
@@ -66,7 +70,7 @@ const pageLinks = getPageLinks(SITE.pageLinks, page.lastPage, page.currentPage, 
               <article>
                 <img src={ post.frontmatter.bannerImage.src } alt={ post.frontmatter.bannerImage.alt } loading="lazy" />
                 <div class="list-item-content">
-                <span class="post-meta">{ post.frontmatter.date }</span>
+                <span class="post-meta">{ formatDate(post.frontmatter, lang, SITE) }</span>
                 <h2>
                   <a href={ post.url }>{ post.frontmatter.title }</a>
                 </h2>
